==> 4ms/DLD/src/f446/i2s.c <==
#include "i2s.h"
#include "globals.h"
#include "stm32f4xx.h"
#include "codec_CS4271.h"
#include "looping_delay.h"
#include "timekeeper.h"

void Start_I2SDMA_Channel1(void) {
	HAL_SAI_Transmit_DMA(&hsai_BlockA1, (uint8_t *)ch1tx_buffer, codec_BUFF_LEN);
	HAL_SAI_Receive_DMA(&hsai_BlockB1, (uint8_t *)ch1rx_buffer, codec_BUFF_LEN);
	HAL_NVIC_EnableIRQ(DMA2_Stream5_IRQn);
}

void Start_I2SDMA_Channel2(void) {
	HAL_SAI_Transmit_DMA(&hsai_BlockA2, (uint8_t *)ch2tx_buffer, codec_BUFF_LEN);
	HAL_SAI_Receive_DMA(&hsai_BlockB2, (uint8_t *)ch2rx_buffer, codec_BUFF_LEN);
	HAL_NVIC_EnableIRQ(DMA2_Stream6_IRQn);
}

void DeInit_I2SDMA_Channel1(void) {
	// __HAL_RCC_SAI1_CLK_DISABLE();
	__HAL_RCC_DMA2_CLK_DISABLE();
	HAL_DMA_DeInit(&hdma_sai1_a);
	HAL_DMA_DeInit(&hdma_sai1_b);
	// DMA_Cmd(AUDIO_I2S3_DMA_STREAM, DISABLE);
	// DMA_Cmd(AUDIO_I2S3_EXT_DMA_STREAM, DISABLE);
}

void DeInit_I2SDMA_Channel2(void) {
	// __HAL_RCC_SAI2_CLK_DISABLE();
	__HAL_RCC_DMA2_CLK_DISABLE();
	HAL_DMA_DeInit(&hdma_sai2_a);
	HAL_DMA_DeInit(&hdma_sai2_b);
	// DMA_Cmd(CODECB_TX_DMA_STREAM, DISABLE);
	// DMA_Cmd(CODECB_RX_DMA_STREAM, DISABLE);
}

void Init_I2SDMA_Channel1(void) {
	//uint32_t Size = codec_BUFF_LEN;
	//dma_ch1tx.DMA_Memory0BaseAddr = (uint32_t)&ch1tx_buffer;
	//dma_ch1tx.DMA_BufferSize = (uint32_t)Size;
	//DMA_ITConfig(AUDIO_I2S3_DMA_STREAM, DMA_IT_FE | DMA_IT_TE | DMA_IT_DME, ENABLE);
	//dma_ch1rx.DMA_Memory0BaseAddr = (uint32_t)&ch1rx_buffer;
	//dma_ch1rx.DMA_BufferSize = (uint32_t)Size;
	//DMA_ITConfig(AUDIO_I2S3_EXT_DMA_STREAM, DMA_IT_TC | DMA_IT_HT | DMA_IT_FE | DMA_IT_TE | DMA_IT_DME, ENABLE);

	ch1tx_buffer_start = (uint32_t)&ch1tx_buffer;
	ch1rx_buffer_start = (uint32_t)&ch1rx_buffer;
	HAL_NVIC_SetPriority(DMA2_Stream5_IRQn, 1, 0);
	HAL_NVIC_DisableIRQ(DMA2_Stream5_IRQn);
}

void Init_I2SDMA_Channel2(void) {
	ch2tx_buffer_start = (uint32_t)&ch2tx_buffer;
	ch2rx_buffer_start = (uint32_t)&ch2rx_buffer;
	HAL_NVIC_SetPriority(DMA2_Stream6_IRQn, 1, 1);
	HAL_NVIC_DisableIRQ(DMA2_Stream6_IRQn);

	//uint32_t Size = codec_BUFF_LEN;

	//DMA_ITConfig(CODECB_RX_DMA_STREAM, DMA_IT_TC | DMA_IT_HT | DMA_IT_FE | DMA_IT_TE | DMA_IT_DME, ENABLE);
}
